Fix PWA icon logo scaling for high visibility

--- a/public/assets/user-front/css/plugins.css
+++ b/public/assets/user-front/css/plugins.css
@@ -14133,9 +14133,9 @@ slick
 .slick-track {
     position: relative;
     top: 0;
-    left: 0;
+    left: 7px;
     display: block;
-    margin-left: auto;
+    /* margin-left: auto; */
     margin-right: auto;
 }
 
